k8s-cd/base/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: hoppingmall
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: grpc
      port: 9094
      targetPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-canary
  namespace: hoppingmall
spec:
  selector:
    app: order-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: grpc
      port: 9094
      targetPort: 9094
