k8s-cd/base/order-service/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: order-service-destrule
  namespace: hoppingmall
spec:
  host: order-service
  subsets:
    - name: stable
      labels:
        app: order-service
    - name: canary
      labels:
        app: order-service
