k8s-cd/base/order-service/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-service-vsvc
  namespace: hoppingmall
spec:
  hosts:
    - order-service
  http:
    - name: primary
      route:
        - destination:
            host: order-service
            subset: stable
          weight: 100
        - destination:
            host: order-service
            subset: canary
          weight: 0
    - name: grpc
      match:
        - port: 9094
      route:
        - destination:
            host: order-service
            subset: stable
          weight: 100
        - destination:
            host: order-service
            subset: canary
          weight: 0
